@@ -1,13 +1,18 @@
 dnl Process this file with autoconf to produce a configure script.
-dnl $Id: configure.in,v 1.4 2006/09/04 13:11:21 ludvigm Exp $
+dnl $Id: configure.in,v 1.5 2006/09/06 06:01:34 ludvigm Exp $
 
 AC_INIT(mysqlfs, 0.2)
 AM_INIT_AUTOMAKE(dist-bzip2)
 AC_CONFIG_HEADERS(config.h)
 AC_CONFIG_SRCDIR([configure.in])
 
+AC_ENABLE_SHARED(no)
+
+AC_DEFINE(FUSE_USE_VERSION, 25, [Fuse API Version])
+AC_DEFINE(MYSQL_MIN_VERSION, 50000, [Minimal supported MySQL version])
+
 AC_DEFINE(_FILE_OFFSET_BITS,64,[Use 64 bits file offsets])
-AC_DEFINE(FUSE_USE_VERSION,22,[Fuse API Version])
+
 AC_ARG_WITH(mysql, [  --with-mysql=DIR    mysql directory ])
 AC_ARG_WITH(fuse, [  --with-fuse=DIR    fuse directory ])
 
@@ -61,8 +66,25 @@ AC_CHECK_LIB(fuse, fuse_main,, AC_MSG_ERROR([Please install fuse library first.]
 
 dnl Checks for header files.
 AC_CHECK_HEADERS(stdio.h)
-AC_CHECK_HEADERS(fuse.h,, AC_MSG_ERROR([Please install fuse header files.]))
-AC_CHECK_HEADERS(mysql/mysql.h,, AC_MSG_ERROR([Please install mysql header files.]))
+
+AC_CHECK_HEADERS(fuse/fuse.h,, AC_MSG_ERROR([Please install FUSE development package]))
+AC_MSG_CHECKING(FUSE API version)
+AC_EGREP_CPP(yes, [#include <fuse/fuse.h>
+#if FUSE_VERSION >= FUSE_USE_VERSION
+yes
+#endif], [AC_MSG_RESULT(ok)], [AC_MSG_RESULT(too old)
+        AC_MSG_ERROR([FUSE version 2.5 or higher is required.])
+])
+
+AC_CHECK_HEADERS(mysql/mysql.h,, AC_MSG_ERROR([Please install MySQL development package]))
+
+AC_MSG_CHECKING(MySQL version)
+AC_EGREP_CPP(yes, [#include <mysql/mysql_version.h>
+#if MYSQL_VERSION_ID > MYSQL_MIN_VERSION
+yes
+#endif], [AC_MSG_RESULT(ok)], [AC_MSG_RESULT(too old)
+        AC_MSG_ERROR([MySQL version 5.0 or higher is required.])
+])
 
 CFLAGS="$CFLAGS $CFLAGS_ADD"
 AC_OUTPUT(Makefile)
